--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.4",
         "laravel/framework": "^8.0",
+        "laravel/octane": "^1.0",
+        "laravel/sail": "^1.12",
         "laravel/telescope": "^4.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
